--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -476,9 +476,17 @@ img::-moz-selection {
 }
 #login{
 	overflow-y: hidden;
-	width: 600px;
-	height: 300px;
-	background: white;
+	width: 520px;
+	height: 320px;
+	background: url('../img/background_login.jpg');
 	border: 1px solid black;
-	border-radius: 25px;
+	border-radius: 10px;
+}
+#register{
+	overflow-y: hidden;
+	width: 520px;
+	height: 400px;
+	background: url('../img/background_login.jpg');
+	border: 1px solid black;
+	border-radius: 10px;
 }
